--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luminalivros",
+  "name": "l-mina-livros",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
-    "tailwindcss": "^3.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
